--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <!-- uncomment lines below to include extra p5 libraries -->
   <!---->
   <!-- script src="p5.sound.js"></script -->
-  <script type="text/javascript" src="longwave.js"></script>
-  <script type="text/javascript" src="particle.js"></script>
+  <script type="text/javascript" src="pulsewave.js"></script>
+  <script type="text/javascript" src="pulseparticle.js"></script>
   <!-- this line removes any default padding and style. you might only need one of these values set. -->
   <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
